--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: passky-server
 category: Password Managers
 name: Passky Server
-version: "v8.0.2"
+version: "8.1.0"
 tagline: Simple, modern, lightweight, open source and secure password manager.
 description: >-
   With Passky, you can easily and securely store all of your passwords in one place.
