--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -24,3 +24,5 @@ gallery:
 path: ""
 defaultUsername: admin
 deterministicPassword: true
+submitter: Rabbit Company LLC
+submission: https://github.com/getumbrel/umbrel-apps/pull/384
