--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: $APP_PASSKY_SERVER_IP
+      APP_HOST: passky-server_server_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
@@ -62,6 +62,3 @@ services:
       LIMITER_GET_REPORT: -1
     volumes:
       - ${APP_DATA_DIR}/data/passky:/var/www/html/databases
-    networks:
-      default:
-        ipv4_address: $APP_PASSKY_SERVER_IP
