--- a/passky-client/umbrel-app.yml
+++ b/passky-client/umbrel-app.yml
@@ -24,3 +24,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: Rabbit Company LLC
+submission: https://github.com/getumbrel/umbrel-apps/pull/385
