--- a/passky-client/docker-compose.yml
+++ b/passky-client/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: $APP_PASSKY_CLIENT_IP
+      APP_HOST: passky-client_web_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
@@ -12,6 +12,3 @@ services:
     image: 'rabbitcompany/passky-web:v8.0.1@sha256:dc113ca668949af9910181f513b64dfaa7e3024130982037fac5aad4ffef7e4a'
     restart: on-failure
     stop_grace_period: 1m
-    networks:
-      default:
-        ipv4_address: $APP_PASSKY_CLIENT_IP
