Update passky client to v8.1.0

--- a/passky-client/docker-compose.yml
+++ b/passky-client/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: 'rabbitcompany/passky-web:v8.0.1@sha256:dc113ca668949af9910181f513b64dfaa7e3024130982037fac5aad4ffef7e4a'
+    image: 'rabbitcompany/passky-client:8.1.0@sha256:a86b950905ad657fd4c93ee371b739ed01f660a07d328471aaf049b74859b99c'
     restart: on-failure
     stop_grace_period: 1m
