--- a/passky-client/umbrel-app.yml
+++ b/passky-client/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: passky-client
 category: Password Managers
 name: Passky Client
-version: "v8.0.1"
+version: "8.1.0"
 tagline: Simple, modern, lightweight, open source and secure password manager.
 description: >-
   With Passky, you can easily and securely store all of your passwords in one place.
