Update Lightning Node

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.5-beta-patch-1"
+version: "0.15.5-beta-2"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,23 +22,20 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  Umbrel patch:
-    - LND will now connect to Bitcoin Core on other networks e.g. testnet
-
-  LND Bug Fixes:
-
-  - A Taproot related key tweak issue was fixed in btcd that affected remote signing setups.
-
-  - Taproot changes addresses are now used by default for the SendCoins RPC.
-
-  - A 1 second interval has been added between FundingLocked receipt checks. This reduces idle CPU usage for pending/dangling funding attempts.
-
-  - The wallet birthday is now used properly when creating a watch-only wallet to avoid scanning the whole chain.
-
-  - Taproot outputs are now correctly shown as SCRIPT_TYPE_WITNESS_V1_TAPROOT in the output of GetTransactions (lncli listchaintxns).
+  Introducing Advanced Settings. Take control of your node and customize it to your needs.
 
 
-  Full changelog can be found here: https://github.com/lightningnetwork/lnd/blob/v0-15-5-branch/docs/release-notes/release-notes-0.15.5.md
+  - Personalize your node by giving it a name and color.
+
+  - Enable larger channels, and limit channel sizes.
+
+  - Set your routing fees, and optimize your routing strategy.
+
+  - Add watchtower services to guard your channels, and run a service for others.
+
+  - Fine-tune the performance and resource usage of your node.
+
+  - And much more!
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
