--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -7,18 +7,13 @@ tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
 
+  The Lightning Network allows ultra cheap and almost instant Bitcoin transactions. By running a Lightning node, you can not only self-custody your Bitcoin on Lightning, but also earn sats by routing payments on the network.
 
-  The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
-  By running a Lightning node, you can not only self-custody your Bitcoin on
-  Lightning, but also earn sats by routing payments on the network.
+  Connect Zeus Wallet, Zap, or any other wallet that supports lndconnect to remotely manage and access your node from anywhere.
 
-
-  Connect Zeus Wallet, Zap, or any other wallet that supports lndconnect
-  to remotely manage and access your node from anywhere.
-
+  With the Advanced Settings feature, you can take control of your node and customize it to your needs. Personalize it with a name, enable larger channels, limit channel sizes, set your routing fees, optimize your routing strategy, add watchtower services, fine-tune its performance, and much more.
 
   Powered by LND.
-
 
   An official app from Umbrel.
 releaseNotes: >-
