Updated Urbit to v1.18

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.17"
+version: "v1.18"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,24 +35,14 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  -   Revamped Urbit’s terminal stack. This release contains the first
-      phase of a longer-running project towards a next-generation terminal
-      experience. Highlights in this release include:
-      
-      -   Support for 2D cursor movement, and by extension 2D screen
-          drawing.
-          
-      -   Minimal mouse-click support.
-      
-      -   Faster pasting of large texts.
-      
-      -   Informal printfs (~&) now get rendered in grey, to visually
-          distinguish them from formal dill output.
-          
-  -   Updated versioning scheme for pre-release binaries.
+  Adds runtime support for the doccords system, which is documentation
+  parsed from comments in source code (Hoon’s version of docstrings).
+  Shoutout to ~datnut-pollen (@drbeefsupreme) for doing the huge amount of
+  work required in order to implement this system, which has been
+  theorized about for years. To see an example of it in action
+  immediately, run # ames in the dojo post upgrade. For the best current
+  documentation on doccords usage, see the example file.
   
-  
-  -   The code for the Vere runtime has been moved out of the urbit/urbit
-      repository, and now lives in urbit/vere.
+  This release accompanies urbit-os-v2.131.
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.17
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.18
