Notice for Simple Torrent

--- a/simple-torrent/umbrel-app.yml
+++ b/simple-torrent/umbrel-app.yml
@@ -28,6 +28,9 @@ description: >-
   - Protocol Handler to magnet:
 
   - Magnet RSS subscribing supported
+
+
+  ⚠️ SimpleTorrent downloads torrents over the Clearnet, not Tor.
 releaseNotes: >-
   - SimpleTorrent now utilizes the shared downloads folder that can be accessed by other apps on Umbrel, such as Jellyfin, File Browser, Transmission, Plex, and more.
 developer: Preston
