--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: Finance
 name: LNbits
-version: "0.9.4"
+version: "0.9.7"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -34,6 +34,8 @@ releaseNotes:  >-
 
   - Updated Onchain Wallet extension: connect our new open-source hardware wallet over serial! More info on https://lnbits.github.io/hardware-wallet/installer/.
 
-  - More improvements to some extensions and bug fixes.
+  - This minor release updates the Docker images and fixes the dependency versions from 0.9.6.1.
+    See the full changelog here: https://github.com/lnbits/lnbits/releases/tag/0.9.6.1 
+
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
