--- a/circuitbreaker/docker-compose.yml
+++ b/circuitbreaker/docker-compose.yml
@@ -8,10 +8,11 @@ services:
       
   web:
     image: ghcr.io/lightningequipment/circuitbreaker:v0.4.1@sha256:cecd9f17ee6de44127a9cdbeb47a6cbdb63b4b720411df6e9cb51cab433219bc
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     init: true
     volumes:
-      - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
-      - ${APP_DATA_DIR}/data:/root/.circuitbreaker
-    command: [ "--configdir=/root/.circuitbreaker", "--network=${APP_BITCOIN_NETWORK}", "--lnddir=/root/.lnd",  "--rpcserver=${APP_LIGHTNING_NODE_IP}:${APP_LIGHTNING_NODE_GRPC_PORT}", "--httplisten=0.0.0.0:9235" ]
+      - ${APP_LIGHTNING_NODE_DATA_DIR}:/data/.lnd:ro
+      - ${APP_DATA_DIR}/data:/data/.circuitbreaker
+    command: [ "--configdir=/data/.circuitbreaker", "--network=${APP_BITCOIN_NETWORK}", "--lnddir=/data/.lnd",  "--rpcserver=${APP_LIGHTNING_NODE_IP}:${APP_LIGHTNING_NODE_GRPC_PORT}", "--httplisten=0.0.0.0:9235" ]
