--- a/circuitbreaker/umbrel-app.yml
+++ b/circuitbreaker/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: circuitbreaker
-category: Finance
+category: Lightning Node Management
 name: Circuit Breaker
 version: "v0.4.1"
 tagline: Your Lightning Node's Firewall
