--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 
 services:
-
   app_proxy:
     environment:
       APP_HOST: passky-server_server_1
@@ -9,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: 'rabbitcompany/passky-server:8.1.2@sha256:abc356e4f998c5e7ec23c040decd928d953fa56bc08d19e5353e096ef790cd32'
+    image: rabbitcompany/passky-server:8.1.2@sha256:abc356e4f998c5e7ec23c040decd928d953fa56bc08d19e5353e096ef790cd32
     restart: on-failure
     stop_grace_period: 1m
     environment:
