--- a/passky-client/docker-compose.yml
+++ b/passky-client/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 
 services:
-
   app_proxy:
     environment:
       APP_HOST: passky-client_web_1
@@ -9,6 +8,6 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: 'rabbitcompany/passky-client:8.1.1@sha256:9c144ceb22920c60dc659c8635f48a92be4bffdb7dc768aba0d26a9a42c3005d'
+    image: rabbitcompany/passky-client:8.1.1@sha256:9c144ceb22920c60dc659c8635f48a92be4bffdb7dc768aba0d26a9a42c3005d
     restart: on-failure
     stop_grace_period: 1m
