--- a/passky-client/umbrel-app.yml
+++ b/passky-client/umbrel-app.yml
@@ -3,7 +3,7 @@ id: passky-client
 category: Password Managers
 name: Passky Client
 version: "8.1.1"
-tagline: Simple, modern, lightweight, open source and secure password manager.
+tagline: Simple, modern, lightweight, open source and secure password manager
 description: >-
   With Passky, you can easily and securely store all of your passwords in one place.
   
