--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.6.12-hotfix-1"
+version: "1.7.5"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,26 +34,20 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  - Use optimization to directly connect to the nbx db for faster querying and better dashboard functionality
+  New features for 1.7.5!
+
+  - Greenfield: Lightning addresses API (#4546) @Kukks
+
   
+  Bug fixes
 
-  1.6.12 is out!
+  - Fix several HTML injections (#4545) @NicolasDorier
+  - BIP21: Uppercase addresses only in QR, not in payment URL (#4553) @dennisreimann
+  - Checkout v2: UI fixes (#4552) @dennisreimann
 
-
-  - Improve LNDHub support
-
-  - Edit Pull Payment UI
-
-  - Custodian Account Deposit UI
-
-  - Add Yadio rate provider
-
-  - Add support for updating POS app through Greenfield API 
-
-  - Allow specifing fee block target for onchain payout processor
-
-  - Greenfield: Extend LN GetInfo data
   
-  - Bug fixes and improvements, too.
+  Improvement
+
+  - Checkout v2: Re-add LNURL for top-up invoices (#4556) @dennisreimann
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
