Update submission url

--- a/nostr-relay/umbrel-app.yml
+++ b/nostr-relay/umbrel-app.yml
@@ -33,4 +33,4 @@ path: ""
 deterministicPassword: false
 torOnly: false
 submitter: Umbrel
-submission: https://TODO.com
+submission: https://github.com/getumbrel/umbrel-apps/pull/398
