--- a/nostr-relay/umbrel-app.yml
+++ b/nostr-relay/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: nostr-relay
-category: Networking
+category: Social
 name: Nostr Relay
 version: "1.0.0"
 tagline: Backup all your Nostr activity with your private relay
