Update Tallycoin Connect to v1.8.0 (#399)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tallycoin-connect
 category: Finance
 name: Tallycoin Connect
-version: "1.7.5"
+version: "1.8.0"
 tagline: Crowdfund donations directly to your Umbrel node with Tallycoin.
 description: Tallycoin is a crowdfunding platform with bitcoin and lightning donations. Together with the Tallycoin Connect app, you can receive donations directly to your Umbrel node. Zero fees!
 developer: djbooth007
@@ -19,6 +19,8 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-  Added: On-chain wallet fallback (server-side) in case node is offline.
+  Added: LNURL and Lightning Address compatibility.
+  
+  Fixed: Mobile view of transaction page.
 submitter: d11n
 submission: https://github.com/getumbrel/umbrel/pull/1052
