--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -1,27 +1,31 @@
 manifestVersion: 1
 id: heimdall
 name: Heimdall
-tagline: Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way.
+tagline: Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way
 icon: https://comm.hannover.blue/bundles/heimdallcore/images/heimdallr.svg
-category: DEVELOPMENT
-version: "1.0.0"
+category: Productivity
+version: "2.5.5"
 port: 7392
 description: >-
-  Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way. Simplicity is the key to Heimdall. Why not use it as your browser start page? It even has the ability to include a search bar using either Google, Bing or DuckDuckGo.
+  Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way.
 
-developer: linuxserver
-website: https://www.linuxserver.io/
-submitter: AxelPilop
-submission: https://github.com/getumbrel/umbrel-apps/pull/390
+
+  Simplicity is the key to Heimdall. Why not use it as your browser start page?
+
+
+  It even has the ability to include a search bar using either Google, Bing or DuckDuckGo.
+developer: LinuxServer.io
+website: https://www.linuxserver.io
 repo: https://github.com/linuxserver/docker-heimdall
 support: https://github.com/linuxserver/docker-heimdall/issues
 gallery:
   - https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/heimdall-banner.png
   - https://codeopolis.com/wp-content/uploads/2020/03/heimdallscreenshot.png
-releaseNotes: >-
-  Just Application implementation
+releaseNotes: ""
 dependencies: []
 path: ""
 torOnly: false
 defaultUsername: ""
 defaultPassword: ""
+submitter: AxelPilop
+submission: https://github.com/getumbrel/umbrel-apps/pull/390
