--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: heimdall_server_1
       APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
 
   server:
     image: lscr.io/linuxserver/heimdall:2.5.5@sha256:656efe8ee113ebcf8214d53e69cc25645ec11b020dec63e619bd379361cee58e
