Add extra fields to app manifest

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -6,12 +6,15 @@ version: "1.231.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
+  
+
   Break down your asset allocation, know your net worth and make solid, data-driven
   investment decisions.
 
 
   Protect your assets. Refine your personal investment strategy.
 
+  
   Ghostfolio empowers busy people to keep track of stocks, ETFs or cryptocurrencies
   without being tracked.
 developer: Ghostfolio
@@ -24,3 +27,8 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+path: ""
+deterministicPassword: false
+torOnly: false
+submitter: BeauAgst
+submission: https://github.com/getumbrel/umbrel-apps/pull/396
