Updated Urbit to v1.19

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.18"
+version: "v1.19"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,18 +35,8 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Adds runtime support for the doccords system, which is documentation
-  parsed from comments in source code (Hoon’s version of docstrings).
+  Minor, incremental release that removes old Windows code and fixes
+  issues with the scrollable area in some terminals.
 
 
-  Shoutout to ~datnut-pollen (@drbeefsupreme) for doing the huge amount of
-  work required in order to implement this system, which has been
-  theorized about for years. To see an example of it in action
-  immediately, run # ames in the dojo post upgrade. For the best current
-  documentation on doccords usage, see the example file.
-
-
-  This release accompanies urbit-os-v2.131.
-
-
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.18
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.19
