Add dojo server to torrc.template

--- a/samourai-server/torrc.template
+++ b/samourai-server/torrc.template
@@ -1,3 +1,7 @@
 # samourai-server whirlpool Hidden Service
 HiddenServiceDir /data/app-$APP_ID-whirlpool
 HiddenServicePort 80 samourai-server_whirlpool_1:8898
+
+# samourai-server dojo Hidden Service
+HiddenServiceDir /data/app-$APP_ID-dojo
+HiddenServicePort 80 samourai-server_nginx_1:80
