Change properties for gallery

--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -2,7 +2,6 @@ manifestVersion: 1
 id: heimdall
 name: Heimdall
 tagline: Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way
-icon: https://comm.hannover.blue/bundles/heimdallcore/images/heimdallr.svg
 category: Productivity
 version: "2.5.5"
 port: 7392
@@ -19,8 +18,9 @@ website: https://www.linuxserver.io
 repo: https://github.com/linuxserver/docker-heimdall
 support: https://github.com/linuxserver/docker-heimdall/issues
 gallery:
-  - https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/heimdall-banner.png
-  - https://codeopolis.com/wp-content/uploads/2020/03/heimdallscreenshot.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
