--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: heimdall
 name: Heimdall
-tagline: Heimdall is a way to organise all those links to your most used web sites and web applications in a simple way
+tagline: Heimdall organises your most used web sites and web applications in a simple way
 category: Productivity
 version: "2.5.5"
 port: 7392
