--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -14,9 +14,9 @@ description: >-
 
   It even has the ability to include a search bar using either Google, Bing or DuckDuckGo.
 developer: LinuxServer.io
-website: https://www.linuxserver.io
-repo: https://github.com/linuxserver/docker-heimdall
-support: https://github.com/linuxserver/docker-heimdall/issues
+website: https://heimdall.site
+repo: https://github.com/linuxserver/Heimdall
+support: https://github.com/linuxserver/Heimdall/issues
 gallery:
   - 1.jpg
   - 2.jpg
