--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.17.3"
+version: "v0.18.15"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -46,26 +46,23 @@ gallery:
   - 3.jpg
   - 4.jpg
 releaseNotes: >-
-  New features:
-
-  * Users can sign and verify signatures
-
-  *  Vector monitoring is now ready (and users can sign using Torq to get started)
-
-  *  Channel point column in the channel stable
-
-  *  In app "Help chat"
-
-  Fixes:
-
-  *  Several UI fixes
-
-  *  Links to mempool, amboss and 1ml are working again
-
-  *  Fix events toggling on channel inspect page
+  This release includes:
+  
+  * Automation!
+  
+  Automation is finally here, or at least the first part of it. You can now automate the channel policy (fee rate etc.) and add or remove tags. We will very soon release more advanced actions and of course Rebalancing!
+  
+  * Detailed data import choices
+  
+  You can now select what data Torq import. This is an important feature for very large nodes that are concerned about the impact of the initial data import. You can gradually turn them on again.
+  
+  * No login required on Umbrel
+  
+  There are also a lot of bug fixes and UI improvements that should make the user experience of Torq better.
+  
 
 path: ""
 defaultUsername: ""
-deterministicPassword: true
+deterministicPassword: false
 submitter: LN Capital
 submission: https://github.com/getumbrel/umbrel-apps/pull/269
