--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndg
 category: Lightning Node Management
 name: LNDg
-version: "1.5.0"
+version: "1.5.1"
 tagline: Analyze and automate your Lightning node management
 description: LNDg is your command center for running a profitable and efficient
   routing node. From quickly viewing your node's health, automated rebalancing,
@@ -32,6 +32,8 @@ releaseNotes: >-
   
   - The channel policy update form has been removed from the bottom of the home dashboard
   
-  - And more... Full details can be found here: https://github.com/cryptosharks131/lndg/releases/tag/v1.5.0
+  - Additional fixes included in v1.5.1
+  
+  - And more... Full details can be found here: https://github.com/cryptosharks131/lndg/releases/tag/v1.5.1
 submitter: cryptosharks131
 submission: https://github.com/getumbrel/umbrel/pull/1189
