--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: Files
 name: Syncthing
-version: "1.23.0"
+version: "1.23.1"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -28,10 +28,6 @@ defaultPassword: ""
 releaseNotes: >-
   Bugfixes:
   
-  - Incorrect rescan interval on auto accepted encrypted folder
-  
-  - Perhaps the list of devices contains empty elements
-  
-  - Properly indicate whether a connection is "LAN" or not in the GUI
+  - "accept: function not implemented" after upgrading to syncthing v1.20.1
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
