Revert using Docker DNS

--- a/samourai-server/torrc.template
+++ b/samourai-server/torrc.template
@@ -1,7 +1,7 @@
-# samourai-server whirlpool Hidden Service
-HiddenServiceDir /data/app-$APP_ID-whirlpool
-HiddenServicePort 80 samourai-server_whirlpool_1:8898
-
 # samourai-server dojo Hidden Service
 HiddenServiceDir /data/app-$APP_ID-dojo
-HiddenServicePort 80 samourai-server_nginx_1:80
+HiddenServicePort 80 $APP_SAMOURAI_SERVER_IP:80
+
+# samourai-server whirlpool Hidden Service
+HiddenServiceDir /data/app-$APP_ID-whirlpool
+HiddenServicePort 80 $APP_SAMOURAI_SERVER_WHIRLPOOL_IP:$APP_SAMOURAI_SERVER_WHIRLPOOL_PORT
