--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   nbxplorer:
-    image: nbxplorer:2.3.60@sha256:19bc931c9b6d18ee2a5b9c26ba41985deb7cce8bdded85c0e4577a0e2a5a34da
+    image: nbxplorer:2.3.61@sha256:eb2035ed31fda0df5c66682802a780944e3889163a91672fe7c6ae5a27e46d11
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -31,7 +31,7 @@ services:
       NBXPLORER_BTCHASTXINDEX: 1
 
   web:
-    image: btcpayserver/btcpayserver:1.7.9@sha256:d91a008f3a7706c47f6a0f2718090e1bba662f6dd3c2c371e206d6d491428826
+    image: btcpayserver/btcpayserver:1.7.10@sha256:9128980f1d984478ed541eec57b76aa38997b01119c34e5501ad040a3506749c
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -54,7 +54,7 @@ services:
       BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
       BTCPAY_SOCKSENDPOINT: $TOR_PROXY_IP:$TOR_PROXY_PORT
       BTCPAY_EXPLORERPOSTGRES: User ID=postgres;Host=btcpay-server_postgres_1;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer$APP_BITCOIN_NETWORK
-
+      BTCPAY_TORSERVICES: "btcpayserver:$APP_HIDDEN_SERVICE"
   postgres:
     image: btcpayserver/postgres:13.7@sha256:dadf0048895a888d88a2dd773dde2f5868c45f74ad37c6d208694df54b590531
     # This needs to run as root for migrations to succeed
