--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.7.5"
+version: "1.7.10"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -17,7 +17,7 @@ description: >-
   You can not only to attach an unlimited number of stores and use the Lightning Network but also become a payment processor for others. Thanks to the apps built on top of it, you can use BTCPay to receive donations, start a crowdfunding campaign or have an in-store Point of Sale.
 
 
-  Please note: Due to your BTCPay instance running on your local network connecting remote applications, such as Shopify or WordPress for example, will fail to connect.
+  Please note: Due to your BTCPay instance running on your local network connecting remote applications, such as Shopify or WordPress for example, will fail to connect, unless you configure the dynamic DNS feature (see: https://docs.btcpayserver.org/Deployment/DynamicDNS).
 developer: BTCPay Server Foundation
 website: https://btcpayserver.org
 dependencies:
@@ -34,20 +34,8 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  New features for 1.7.5!
-
-  - Greenfield: Lightning addresses API (#4546) @Kukks
-
-  
   Bug fixes
 
-  - Fix several HTML injections (#4545) @NicolasDorier
-  - BIP21: Uppercase addresses only in QR, not in payment URL (#4553) @dennisreimann
-  - Checkout v2: UI fixes (#4552) @dennisreimann
-
-  
-  Improvement
-
-  - Checkout v2: Re-add LNURL for top-up invoices (#4556) @dennisreimann
+  - After successful migration from SQLite or MySql, there is an error after a restart @NicolasDorier
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
