--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: ghostfolio
 category: Finance
-name: ghostfolio
+name: Ghostfolio
 version: "1.231.0"
 tagline: Manage your wealth like a boss
 description: >-
