Fix Docker image digests

--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   nbxplorer:
-    image: nbxplorer:2.3.61@sha256:eb2035ed31fda0df5c66682802a780944e3889163a91672fe7c6ae5a27e46d11
+    image: nicolasdorier/nbxplorer:2.3.61@sha256:be1d0cfdf33db4953a4c72306389460024a07ba461fe9054a59e6c631fc8eefb
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -31,7 +31,7 @@ services:
       NBXPLORER_BTCHASTXINDEX: 1
 
   web:
-    image: btcpayserver/btcpayserver:1.7.10@sha256:9128980f1d984478ed541eec57b76aa38997b01119c34e5501ad040a3506749c
+    image: btcpayserver/btcpayserver:1.7.10@sha256:35357cd9260ea5e6a01ffde0c0c3218f845cb5fc888dbaffb9adfb0a65fb34d8
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
