--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -32,4 +32,16 @@ defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
 releaseNotes: >-
-  - https://github.com/stakwork/sphinx-relay/releases/tag/v2.2.13
+  - fix: made the bot message seen as false
+
+  - fix: lower limit amount for /feeds
+
+  - fix: removed deprecated auth code that was not used in codebase
+
+  - fix: we updated to a new workflow id
+
+  - fix: call recoding length
+
+  - And much much more...
+
+  Full changelog can be found here: https://github.com/stakwork/sphinx-relay/releases/tag/v2.2.13
