Capitalise in release notes

--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -32,15 +32,15 @@ defaultPassword: ""
 submitter: Stakwork
 submission: https://github.com/getumbrel/umbrel/pull/341
 releaseNotes: >-
-  - fix: made the bot message seen as false
+  - Fix: made the bot message seen as false
 
-  - fix: lower limit amount for /feeds
+  - Fix: lower limit amount for /feeds
 
-  - fix: removed deprecated auth code that was not used in codebase
+  - Fix: removed deprecated auth code that was not used in codebase
 
-  - fix: we updated to a new workflow id
+  - Fix: we updated to a new workflow id
 
-  - fix: call recoding length
+  - Fix: call recoding length
 
   - And much much more...
 
