Add description to release notes

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -25,7 +25,10 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  Important Notes
+  Rotki v1.27.0 is the biggest release rotki has ever made. It contains a lots of new features, improvements and bug fixes we made in the past 3 months! The biggest feature coming here is proper multi-evm chain support starting with Optimism and the introduction of Optimism support for transactions history, balances etc.
+
+
+  Important Notes:
   
   - When opening the release for the first time you will see all your ethereum accounts that have had activity in either optimism or avalanche being also added for these chains. (The only exception to this is if you pull from premium server to a new machine and the old version you sync from has not yet been upgraded to 1.27.0)
   
