fix(Jam): abbreviate dev and submitter in manifest yml

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -24,7 +24,7 @@ releaseNotes: >-
   - Coin Control: Quick freeze/unfreeze utxos
 
   - Coin Control: Show jar total amount in detail view
-developer: JoinMarket WebUI Organisation
+developer: JoinMarket WebUI Org.
 website: https://jamapp.org
 dependencies:
   - bitcoin
@@ -39,5 +39,5 @@ path: ""
 defaultUsername: umbrel
 defaultPassword: ""
 deterministicPassword: true
-submitter: JoinMarket WebUI Organisation
+submitter: JoinMarket WebUI Org.
 submission: https://github.com/getumbrel/umbrel/pull/1216
