Update Jam to v0.1.5 (#413)

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: jam
 category: Finance
 name: Jam
-version: "0.1.4"
+version: "0.1.5"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,12 +13,18 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Speed up initial page load
+  - Fees: Allow min tx fee of 1sat/vbyte
 
-  - Ability to spend (expired) fidelity bond
+  - Fees: Allow input for relative fee limit of 0.0001%
 
-  - Improved settings page with subsections
-developer: JoinMarket WebUI Organisation
+  - Bonds: Correctly display success screen after unlocking fb
+
+  - Sweep: Display success screen after a scheduler run completes
+
+  - Coin Control: Quick freeze/unfreeze utxos
+
+  - Coin Control: Show jar total amount in detail view
+developer: JoinMarket WebUI Org.
 website: https://jamapp.org
 dependencies:
   - bitcoin
@@ -33,5 +39,5 @@ path: ""
 defaultUsername: umbrel
 defaultPassword: ""
 deterministicPassword: true
-submitter: JoinMarket WebUI Organisation
+submitter: JoinMarket WebUI Org.
 submission: https://github.com/getumbrel/umbrel/pull/1216
