--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndboss
 category: Lightning Node Management
 name: LndBoss
-version: "2.16.0"
+version: "2.17.1"
 tagline: A GUI for BalanceOfSatoshis
 description: LndBoss is a GUI for BalanceOfSatoshis.
   It is a tool that makes it easy to run your favorite
@@ -25,6 +25,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  - 2.17.1 (2023-02-14)
+    Fixed condition for auto-fees when outbound/capacity ratio is zero.
+
+  - 2.17.0 (2023-01-31)
+    Added avoid-high-fee-routes to probe command.
+    Added avoid high-fee-routes to pay command.
+    Added avoid high-fee-routes to send command.
+    Added support for calling acceptsChannelOpen, connectPeer, findKey and getNetwork to call command.
+
   - 2.16.0 (2023-01-13)
     Added bos encrypt command.
     Added bos decrypt command.
@@ -39,11 +48,5 @@ releaseNotes: >
   - 2.14.0 (2022-12-19)
     Added bos clean-failed-payments command.
 
-  - 2.13.0 (2022-12-07)
-    Added bos utxos command.
-    Added date flag to accounting command for precision.
-
-  - 2.12.0 (2022-11-28)
-    Added allow flag to create-channel-group command to determine order and allow list for joining group.
 submitter: Nitesh Balusu
 submission: https://github.com/getumbrel/umbrel-apps/pull/65
