fix autogenerated release notes error

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -35,4 +35,6 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Adds the 
+  Adds the %meme debug hint, resolves segfaults on macos-aarch64 builds, and adds a new --replay option.
+  
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.20
