Ability to specify the main Docker container

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -64,7 +64,7 @@ jobs:
                             "version": "${{ steps.get_latest.outputs.latest }}"
                         },
                         "${{ env.ID }}/docker-compose.yml": {
-                            "services.server.image": "${{ env.DOCKER }}:${{ steps.get_latest.outputs.latest }}@${{ steps.get_hash.outputs.hash }}"
+                            "services.${{ env.MAIN }}.image": "${{ env.DOCKER }}:${{ steps.get_latest.outputs.latest }}@${{ steps.get_hash.outputs.hash }}"
                         }
                     }
                 commitChange: true
