--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.19"
+version: "v1.20"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,8 +35,6 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Minor, incremental release that removes old Windows code and fixes
-  issues with the scrollable area in some terminals.
-
-
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.19
+  Adds the %meme debug hint, resolves segfaults on macos-aarch64 builds, and adds a new --replay option.
+  
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.20
