--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jellyfin
 category: Media
 name: Jellyfin
-version: "10.8.4"
+version: "10.8.9"
 tagline: The Free Software Media System
 description: >-
   Jellyfin is the volunteer-built media solution that puts you in control of your media. Stream to any device from your own server, with no strings attached. Your media, your server, your way.
@@ -31,6 +31,15 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  Linux Server changes : 
+  - Rebase master to Jammy, migrate to s6v3.
+  
+  Remote changes :
+  - Updating to 10.8.9-1
+  
+  
+  Full changelog is available here : https://github.com/linuxserver/docker-jellyfin/releases
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
