--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.7"
 
 services:
   app_proxy:
@@ -37,3 +37,13 @@ services:
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/caddy-data/Caddyfile:/etc/caddy/Caddyfile
+  
+  tor: 
+   image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a 
+   user: "1000:1000" 
+   restart: on-failure 
+   volumes: 
+     - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro 
+     - ${TOR_DATA_DIR}:/data 
+   environment: 
+    HOME: "/tmp"
