--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -5,11 +5,14 @@ name: TDEX Provider
 version: "0.8.15"
 tagline: Provide liquidity on the TDEX Network, an open protocol to trade Liquid Network assets.
 description: >-
-  A Provider holds Liquid reserves of both a BASE_ASSET-QUOTE_ASSET in his non-custodial Liquid hot-wallet, running automated market-making strategies, either with or without an oracle. Providers are incentivized to be always on and need to expose a public reachable endpoint either via clearnet or using a Onion hidden service
+  A Provider holds Liquid reserves of both a BASE_ASSET-QUOTE_ASSET in his non-custodial Liquid hot-wallet, running automated market-making strategies, either with or without an oracle. Providers are incentivized to be always on and need to expose a public reachable endpoint either via clearnet or using a Onion hidden service.
 
-  A small provider's fee can be taken out of each trade and added to the reserves. While the BASE_ASSET-QUOTE_ASSET reserve ratio is constantly shifting, fees make sure that the total combined reserve size increases with every trade. Guaranteed arbitrage opportunities from price fluctuations should push a steady flow of transactions through the system and increase the amount of fee revenue generated. 
 
-  A liquidity provider has full control over the market making strategy to apply needed to calculate the market rate at which to accept trades. That being said, there is a possibility to apply an automated market-making relying only on the reserves balances and the amount requested by the trader, without the need to connect to an external price feed. The default strategy of the alpha daemond is the constant product market-making. In short, this model generates a full order-book based on an initial price for the market. Every transaction that occurs on this market will adjust the prices of the market accordingly. It's a basic supply and demand automated market making system. 
+
+  A small provider's fee can be taken out of each trade and added to the reserves. 
+
+
+  A liquidity provider has full control over the market making strategy to apply needed to calculate the market rate at which to accept trades. That being said, there is a possibility to apply an automated market-making relying only on the reserves balances and the amount requested by the trader, without the need to connect to an external price feed. The default strategy of the alpha daemond is the constant product market-making. In short, this model generates a full order-book based on an initial price for the market. Every transaction that occurs on this market will adjust the prices of the market accordingly.
 releaseNotes: >-
   - New Dashboard!
 dependencies: []
@@ -17,6 +20,8 @@ developer: TDEX Network developers
 website: https://dev.tdex.network
 repo: https://github.com/tdex-network/tdex-daemon
 support: https://t.me/tdexnetwork
+submitter: tiero
+submission: https://github.com/getumbrel/umbrel-apps/pull/151
 port: 9094
 torOnly: false
 gallery:
