--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.7.5"
+version: "1.7.12"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,20 +34,24 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  New features for 1.7.5!
-
-  - Greenfield: Lightning addresses API (#4546) @Kukks
+  Update recommended for shared instances.
 
   
   Bug fixes
 
-  - Fix several HTML injections (#4545) @NicolasDorier
-  - BIP21: Uppercase addresses only in QR, not in payment URL (#4553) @dennisreimann
-  - Checkout v2: UI fixes (#4552) @dennisreimann
+  - Fix second order XSS: Harden file type input (#4635) @NicolasDorier
+  - UI: The standalone confirmation modal design was broken @dennisreimann
+  - Fix: Setting the password of a new created user via API shouldn't be required (#4534, #4647) @NicolasDorier
+  - Fix: If user get locked out, unlocking or deleting user fails (#4641, #4644) @NicolasDorier
+  - Fix: Migrating from SQLite was crashing in some conditions (#4623) @NicolasDorier
+  - Fix: Unable to Edit amount when cloning paid Payment Request (#4639) @NicolasDorier
+  - Webhook: Add missing model validation (#4636) @dennisreimann
+  - Checkout v2: Fix automatic redirect after paid (#4633) @dennisreimann
 
   
   Improvement
 
-  - Checkout v2: Re-add LNURL for top-up invoices (#4556) @dennisreimann
+  - Preferred paging count is saved into user preferences cookie (#4637) @dennisreimann
+  - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
