add reference to release notes between versions 1.7.5 and 1.7.12

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -62,5 +62,7 @@ releaseNotes: >
 
   - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
 
+
+  For release notes of versions between 1.7.5 and 1.7.12, see https://github.com/btcpayserver/btcpayserver/tags
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
