--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -2,17 +2,18 @@ manifestVersion: 1
 id: oak-node
 category: Finance
 name: Oak Node
-version: "0.3.4"
+version: "0.3.5"
 tagline: Do more with your LND node
 description: >-
-  Oak Node gives you Scheduled Payments. Now you can send sats to a Lightning Address on a schedule. 
-  Support your favorite content creators every week, every day, or even every block! Up to you.
+  Oak Node gives you Scheduled Sends. Use it to schedule recurring tips to LNURL or Lightning Addresses. 
 
 
-  Oak Node also includes an optional bot module for more advanced users.
+  For Nostriches out there, the included Nostr bot gives you control over your sats from any Nostr client.
 releaseNotes: >-
-  This update brings an experimental section for Nostr Proof-of-Work notes, 
-  alongside a few UI improvements and a Feedback Via Lightning page.
+  The Nostr bot now has a Shadowy LN Tips feature. Once it's set up, you can use any Nostr client to trigger an LN tip to anyone by just liking one of their notes.
+  
+  
+  This update also brings NIP-65 support for more reliable pairing, auto-reconnects to relays when necessary, npub support and more.
 developer: Carlos
 website: https://oak-node.net
 dependencies:
