update release notes

--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -32,16 +32,10 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Linux Server changes : 
+  Updates Jellyfin from version 10.8.4 to 10.8.9. This update includes a series of stable hotfix releases that improve the overall performance, stability, and functionality of Jellyfin.
   
-  - Rebase master to Jammy, migrate to s6v3.
-  
-  Remote changes :
-  
-  - Updating to 10.8.9-1
-  
-  
-  Full changelog is available here : https://github.com/linuxserver/docker-jellyfin/releases
+
+  Full changelogs for Jellyfin releases can be found here: https://github.com/jellyfin/jellyfin/releases
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
