--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -31,6 +31,14 @@ defaultUsername: ""
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
+  Pi-Hole component versions:
+  
+  - Core v5.15.5, FTL v5.21, AdminLTE v5.18.4
+  
+  Changelog: 
+  
+  - (Umbrel Specific) Switch version referece in the Umbrel app store to Pi-Hole's docker one
+  
   - Replace deprecated variables with the correct ones by @rdwebdesign in #1320
   
   - Remove default lightttd from the image 4961bf4
