update release notes

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -34,6 +34,13 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  Updates BTCPay Server from version 1.7.5 to 1.7.12.
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.7.5 and 1.7.12 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
+  
+  
+  Version 1.7.12 release notes:
+  
   Update recommended for shared instances.
 
   
@@ -62,7 +69,5 @@ releaseNotes: >
 
   - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
 
-
-  For release notes of versions between 1.7.5 and 1.7.12, see https://github.com/btcpayserver/btcpayserver/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
