--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndboss
 category: Lightning Node Management
 name: LndBoss
-version: "2.17.1"
+version: "2.17.3"
 tagline: A GUI for BalanceOfSatoshis
 description: LndBoss is a GUI for BalanceOfSatoshis.
   It is a tool that makes it easy to run your favorite
@@ -25,6 +25,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  - 2.17.3 (2023-02-23)
+    Fixed a bug where old config is being used for auto fees updates.
+
   - 2.17.1 (2023-02-14)
     Fixed condition for auto-fees when outbound/capacity ratio is zero.
 
@@ -33,20 +36,6 @@ releaseNotes: >
     Added avoid high-fee-routes to pay command.
     Added avoid high-fee-routes to send command.
     Added support for calling acceptsChannelOpen, connectPeer, findKey and getNetwork to call command.
-
-  - 2.16.0 (2023-01-13)
-    Added bos encrypt command.
-    Added bos decrypt command.
-    Added bos invoice command.
-    Improved display output for rebalance, lnurl, pay, send and probe commands.
-    Bumped dependencies.
-
-  - 2.15.0 (2022-12-30)
-    Added quick tools page to create invoice, pay invoice, create onchain address and send onchain.
-    Fixed a bug where detailed balance is broken for balance command.
-
-  - 2.14.0 (2022-12-19)
-    Added bos clean-failed-payments command.
 
 submitter: Nitesh Balusu
 submission: https://github.com/getumbrel/umbrel-apps/pull/65
