--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.7.5"
+version: "1.7.12"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -14,10 +14,10 @@ description: >-
   Payments with BTCPay Server go directly to your wallet, which increases the privacy and security. Your private keys are never uploaded to your Umbrel. There is no address re-use, since each invoice generates a new address deriving from your xpubkey.
 
 
-  You can not only to attach an unlimited number of stores and use the Lightning Network but also become a payment processor for others. Thanks to the apps built on top of it, you can use BTCPay to receive donations, start a crowdfunding campaign or have an in-store Point of Sale.
+  You can not only attach an unlimited number of stores and use the Lightning Network but also become a payment processor for others. Thanks to the apps built on top of it, you can use BTCPay to receive donations, start a crowdfunding campaign or have an in-store Point of Sale.
 
 
-  Please note: Due to your BTCPay instance running on your local network connecting remote applications, such as Shopify or WordPress for example, will fail to connect.
+  Please note: Due to your BTCPay instance running on your local network connecting remote applications, such as Shopify or WordPress for example, will fail to connect, unless you configure the dynamic DNS feature (see: https://docs.btcpayserver.org/Deployment/DynamicDNS).
 developer: BTCPay Server Foundation
 website: https://btcpayserver.org
 dependencies:
@@ -34,20 +34,40 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  New features for 1.7.5!
-
-  - Greenfield: Lightning addresses API (#4546) @Kukks
+  Updates BTCPay Server from version 1.7.5 to 1.7.12.
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.7.5 and 1.7.12 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
+  
+  
+  Version 1.7.12 release notes:
+  
+  Update recommended for shared instances.
 
   
   Bug fixes
 
-  - Fix several HTML injections (#4545) @NicolasDorier
-  - BIP21: Uppercase addresses only in QR, not in payment URL (#4553) @dennisreimann
-  - Checkout v2: UI fixes (#4552) @dennisreimann
+  - Fix second order XSS: Harden file type input (#4635) @NicolasDorier
+
+  - UI: The standalone confirmation modal design was broken @dennisreimann
+
+  - Fix: Setting the password of a new created user via API shouldn't be required (#4534, #4647) @NicolasDorier
+
+  - Fix: If user get locked out, unlocking or deleting user fails (#4641, #4644) @NicolasDorier
+
+  - Fix: Migrating from SQLite was crashing in some conditions (#4623) @NicolasDorier
+
+  - Fix: Unable to Edit amount when cloning paid Payment Request (#4639) @NicolasDorier
+
+  - Webhook: Add missing model validation (#4636) @dennisreimann
+
+  - Checkout v2: Fix automatic redirect after paid (#4633) @dennisreimann
 
   
   Improvement
 
-  - Checkout v2: Re-add LNURL for top-up invoices (#4556) @dennisreimann
+  - Preferred paging count is saved into user preferences cookie (#4637) @dennisreimann
+
+  - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
+
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
