--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -1,12 +1,12 @@
 manifestVersion: 1
 id: heimdall
 name: Heimdall
-tagline: Heimdall organises your most used web sites and web applications in a simple way
+tagline: Organize your most used web sites in a simple way
 category: Productivity
 version: "2.5.5"
 port: 7392
 description: >-
-  As the name suggests Heimdall Application Dashboard is a dashboard for all your web applications. It doesn't need to be limited to applications though, you can add links to anything you like.
+  Heimdall is a dashboard for all your web applications. It doesn't need to be limited to applications though, you can add links to anything you like.
 
   
   Heimdall is an elegant solution to organise all your web applications. It’s dedicated to this purpose so you won’t lose your links in a sea of bookmarks.
