update release notes

--- a/gitea/umbrel-app.yml
+++ b/gitea/umbrel-app.yml
@@ -42,27 +42,33 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  Release notes for 1.18.15!
+  This release updates Gitea from 1.16.8 to 1.18.5.
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.16.8 and 1.18.5 can be found here: https://github.com/go-gitea/gitea/releases.
+  
+  
+  Version 1.18.5 release notes:
   
   ENHANCEMENTS
   
-  -Hide 2FA status from other members in organization members list (#22999) (#23023)
+  - Hide 2FA status from other members in organization members list
   
+
   BUGFIXES
   
-  - Add force_merge to merge request and fix checking mergable (#23010) (#23032)
+  - Add force_merge to merge request and fix checking mergable
   
-  - Use --message=%s for git commit message (#23028) (#23029)
+  - Use --message=%s for git commit message
   
-  - Render access log template as text instead of HTML (#23013) (#23025)
+  - Render access log template as text instead of HTML
   
-  - Fix the Manually Merged form (#23015) (#23017)
+  - Fix the Manually Merged form
   
-  - Use beforeCommit instead of baseCommit (#22949) (#22996)
+  - Use beforeCommit instead of baseCommit
   
-  - Display attachments of review comment when comment content is blank (#23035) (#23046)
+  - Display attachments of review comment when comment content is blank
   
-  - Return empty url for submodule tree entries (#23043) (#23048)
+  - Return empty url for submodule tree entries
 
 torOnly: false
 submitter: Umbrel
